# petpptx

./: .gitignore  CHANGES.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst
docs/_templates/: sidebarlinks.html
docs/api/: action.rst  chart-data.rst  chart.rst  dml.rst  exc.rst  image.rst  placeholders.rst  presentation.rst  shapes.rst  slides.rst  table.rst  text.rst  util.rst
docs/community/: faq.rst  support.rst  updates.rst
docs/dev/: development_practices.rst  philosophy.rst  runtests.rst  xmlchemy.rst
docs/user/: autoshapes.rst  charts.rst  concepts.rst  install.rst  intro.rst  notes.rst  placeholders-understanding.rst  placeholders-using.rst  presentations.rst  quickstart.rst  slides.rst  table.rst  text.rst  understanding-shapes.rst  use-cases.rst
features/: act-action.feature  act-hyperlink.feature  cht-axis-props.feature  cht-axistitle-props.feature  cht-category-access.feature  cht-category-props.feature  cht-chart.feature  cht-charttitle-props.feature  cht-data-props.feature  cht-datalabels.feature  cht-gridlines-props.feature  cht-legend-access.feature  cht-legend-props.feature  cht-marker-props.feature  cht-plot-props.feature  cht-point-access.feature  cht-point-props.feature  cht-replace-data.feature  cht-series.feature  cht-ticklabels-props.feature  dml-color.feature  dml-effect.feature  dml-fill.feature  dml-line.feature  environment.py  ph-inherit-props.feature  ph-insert-shape.feature  ph-phfmt-props.feature  ph-placeholder-props.feature  prs-coreprops.feature  prs-default-template.feature  prs-open-save.feature  prs-presentation-props.feature  shp-autoshape.feature  shp-connector.feature  shp-freeform.feature  shp-graphicframe.feature  shp-groupshape.feature  shp-movie-props.feature  shp-picture.feature  (+15 more)
features/steps/: action.py  axis.py  background.py  category.py  (+24 more)
pptx/: __init__.py  action.py  api.py  exc.py  file.py  media.py  package.py  presentation.py  shared.py  slide.py  spec.py  table.py  util.py
tests/: test_presentation.py  test_read_zip.py
(+331 files in other folders)
